--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=multitenant-singledb
 
 # Master database configuration
-spring.datasource.url=jdbc:mysql://52.220.200.92:3306/MULTITENANT_SINGLE_DB?createDatabaseIfNotExist=true
-spring.datasource.username=remote
-spring.datasource.password=11mfuAD76oY7kas
+spring.datasource.url=jdbc:mysql://localhost:3306/MULTITENANT_SINGLE_DB?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
